[package]
name = "criterion-table"
version = "0.4.0"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Generate markdown comparison tables from cargo-criterion benchmark output"
repository = "https://github.com/nu11ptr/criterion-table"
documentation = "https://docs.rs/criterion-table"
keywords = ["benchmark", "criterion", "markdown"]
categories = ["development-tools::profiling"]
readme = "../README.md"
edition = "2021"

[dependencies]
anyhow = "1"
flexstr = { version = "0.8", features = ["serde"] }
indexmap = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = {version = "0.5", features = ["preserve_order"] }

[dev-dependencies]
criterion = "0.3"
